--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
     "version": "0.0.0",
     "description": "Dynamic Web Server using Node JS",
     "author": {
-        "name": "",
-        "email": ""
+        "name": "Joe Schoen",
+        "email": "scho7642@stthomas.edu"
     },
     "contributors": [
         {
-            "name": "",
+            "name": "Matthew Pastrana",
             "email": ""
         },
         {
