Getting files ready

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "description": "Dynamic Web Server using Node JS",
     "author": {
-        "name": "Joe Schoen",
+        "name": "Joseph Schoen",
         "email": "scho7642@stthomas.edu"
     },
     "contributors": [
