--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "contributors": [
         {
             "name": "Matthew Pastrana",
-            "email": ""
+            "email": "matthew.pastrana@stthomas.edu"
         },
         {
             "name": "",
@@ -19,7 +19,7 @@
     "main": "server.js",
     "repository": {
         "type": "git",
-        "url": ""
+        "url": "https://joseph-scho7642.github.io/"
     },
     "dependencies": {
         "express": "^4.18.2",
